# listic-lite

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py  windsurf-plan.yaml
ai_agent/: agent.py  config.py  data_models.py  definition.py  tasks.py  tools.py
